refactor(mlgrush): games-common adoptieren, toter Code raus, Modernisierung
- PlayerUtils delegiert ActionBar/formatSeconds an games-common (NMS-Code nur noch zentral)
- EntityDamageByEntityListener: toter ARMOR_STAND-Zweig entfernt (innerhalb instanceof Player unerreichbar)
- Raw-ArrayList-Casts durch typisierte Kopien ersetzt
- Listener-Scan loggt Fehler statt sie zu schlucken, deprecated Class.newInstance ersetzt